src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__inspect__tests__draw_blocks_inspect_custom_keymap_inspect_one.snap
---
source: src/ui/draw_blocks/inspect.rs
expression: setup.terminal.backend()
---
"╭───────────────────── inspecting: postgres 0bdea642  - c or Esc or 4 to exit ─────────────────────╮"
"│  "Id": "0bdea64212f9c75eb4a1184dd406c2c79a986a7a889a23c85358456cc1bb60c7",                       │"
"│  "Created": "2026-01-23T22:20:19.927967311Z",                                                    │"
"│  "Path": "docker-entrypoint.sh",                                                                 │"
"│  "Args": [                                                                                       │"
"│    "postgres"                                                                                    │"
"│  ],                                                                                              │"
"│  "State": {                                                                                      │"
"│    "Status": "running",                                                                          │"
"│    "Running": true,                                                                              │"
"│    "Paused": false,                                                                              │"
"│    "Restarting": false,                                                                          │"
"│    "OOMKilled": false,                                                                           │"
"│    "Dead": false,                                                                                │"
"│    "Pid": 788,                                                                                   │"
"│    "ExitCode": 0,                                                                                │"
"│    "Error": "",                                                                                  │"
"│    "StartedAt": "2026-01-29T12:50:35.134495388Z",                                                │"
"│    "FinishedAt": "2026-01-29T12:50:34.76000107Z"                                                 │"
"│  },                                                                                              │"
"│  "Image": "sha256:aa3668fcbcb5ded731b7d5c27065a4edf545debb7f27bf514c709b1b4e032352",             │"
"│  "ResolvConfPath": "/var/lib/docker/containers/0bdea64212f9c75eb4a1184dd406c2c79a986a7a889a23c853│"
"│  "HostnamePath": "/var/lib/docker/containers/0bdea64212f9c75eb4a1184dd406c2c79a986a7a889a23c85358│"
"│  "HostsPath": "/var/lib/docker/containers/0bdea64212f9c75eb4a1184dd406c2c79a986a7a889a23c85358456│"
"│  "LogPath": "/var/lib/docker/containers/0bdea64212f9c75eb4a1184dd406c2c79a986a7a889a23c85358456cc│"
"│  "Name": "/postgres",                                                                            │"
"│  "RestartCount": 0,                                                                              │"
"│  "Driver": "overlay2",                                                                           │"
"│  "Platform": "linux",                                                                            │"
"│  "MountLabel": "",                                                                               │"
"│  "ProcessLabel": "",                                                                             │"
"│  "AppArmorProfile": "",                                                                          │"
"│  "HostConfig": {                                                                                 │"
"│    "CpuShares": 0,                                                                               │"
"│    "Memory": 1073741824,                                                                         │"
"│    "CgroupParent": "",                                                                           │"
"│    "BlkioWeight": 0,                                                                             │"
"│    "CpuPeriod": 0,                                                                               │"
"│    "CpuQuota": 0,                                                                                │"
"│    "CpuRealtimePeriod": 0,                                                                       │"
"│    "CpuRealtimeRuntime": 0,                                                                      │"
"│    "CpusetCpus": "",                                                                             │"
"│    "CpusetMems": "",                                                                             │"
"│    "MemoryReservation": 0,                                                                       │"
"│    "MemorySwap": 2147483648,                                                                     │"
"│    "NanoCpus": 0,                                                                                │"
"│    "OomKillDisable": false,                                                                      │"
"│    "CpuCount": 0,                                                                                │"
"│    "CpuPercent": 0,                                                                              │"
"╰────────────────────────────────────     0/158 ↓      0/307 → ────────────────────────────────────╯"
